02_aks_intro_to_infra_teams/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inspectorgadget
  namespace: default
spec:
  ingressClassName: nginx
  rules:
#   - host: mycompany.com
  - http:
      paths:
      - backend:
          service:
            name: inspectorgadget
            port:
              number: 80
        path: /
        pathType: Prefix
#   tls:
#   - hosts:
#     - mycompany.com
#     secretName: secret-tls
